tests/fixtures/invalid/set_notin_int.py
# Cannot use 'not in' with Set[int] and Int
x: bool = {1, 2, 3} not in 1
